added text content

--- a/darkmode.html
+++ b/darkmode.html
@@ -153,7 +153,9 @@
         .card__bottom p{
             color: #2525256f;
         }
-       
+        .text{
+            max-width:  950px;
+        }
 
     </style>
 </head>
@@ -168,6 +170,10 @@
         
     </nav>
     <div class="wrapper">
+        <div class="text">
+            <h1>Content</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad totam magnam facilis eos fugit dignissimos, corporis non veniam minima animi ullam earum, atque maxime explicabo magni quod amet enim accusantium doloribus odio laborum, quaerat dolorum? Suscipit quas voluptates eum expedita in, nobis quidem praesentium sed, quod ratione omnis officiis corrupti, distinctio laudantium? Quas modi eligendi nulla, aperiam delectus optio, quam id veniam velit tempore in dolorum cumque iure et quidem exercitationem dicta nam. Eligendi hic reprehenderit, ratione ea inventore soluta in doloremque ex nobis molestias quis nam placeat autem dolorem aperiam unde corrupti provident ullam odit quaerat incidunt. Fugiat, praesentium?</p>
+        </div>
         <div class="container">
 
             <div class="card">
@@ -213,6 +219,7 @@
             </div>
 
         </div><!--container-->
+
     </div><!--wrapper-->
 
 
