--- a/darkmode.html
+++ b/darkmode.html
@@ -156,6 +156,11 @@
         .text{
             max-width:  950px;
         }
+        @media screen and (max-width: 676px){
+            .container{
+                display: block;
+            }
+        }
 
     </style>
 </head>
