--- a/darkmode.html
+++ b/darkmode.html
@@ -157,8 +157,14 @@
             max-width:  950px;
         }
         @media screen and (max-width: 676px){
+            nav{
+                margin-bottom: 80px;
+            }
             .container{
                 display: block;
+            }
+            .text{
+                padding: 0 10px;
             }
         }
 
